--- a/blog-single-post3.html
+++ b/blog-single-post3.html
@@ -66,11 +66,11 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span></span></h1>
+		<h1><span>Projecto “CEF – Novos tempos -Novas aprendizagens”</span></h1>
 		<div>
 			<img src="" alt="">
 			<div class="article">
-				<h2>Projecto “CEF – Novos tempos -Novas aprendizagens”</h2>
+				<h2>Projecto CEF</h2>
 			     <div class="container">
 				    <iframe src="https://drive.google.com/file/d/1ngxoanPxzGZtCTkxZ4GbShZs4V3U1czT/preview" width="100%" height="600px"></iframe> 
 				</div>
