--- a/Geo1.html
+++ b/Geo1.html
@@ -69,7 +69,8 @@
 	<div id="body">
 		<h1><span>geologia</span></h1>
 		<div>
-			<iframe src="https://drive.google.com/file/d/1gPmVww8zhIxX9gAQHV8mzG7Tb4SyAvl2/preview" width="300" height="400"></iframe>
+			<iframe src="https://drive.google.com/file/d/1gPmVww8zhIxX9gAQHV8mzG7Tb4SyAvl2/preview" width="300" height="400" 
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
 			<h4>Transporte de Materiais</h4> 
