--- a/fil1.html
+++ b/fil1.html
@@ -67,10 +67,7 @@
 	<div id="body">
 		<h1><span>Filosofia</span></h1>
 		<div>
-			 <iframe width="300" height="400" src="https://www.youtube.com/embed/c-KFHR8aGS8"
-		  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			
-			
+			<iframe src="https://drive.google.com/file/d/1BvOKxI4eY9XShbsyEs4I7suh9h08AKzL/preview" width="100%" height="600px"></iframe>
 			<div class="article">
 				<h4>Filosofia Africana</h4>
 			</div>
