--- a/fil3.html
+++ b/fil3.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Matéria - Mundocef</title>
+	<title>Filosofia/Falácias - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -69,7 +69,11 @@
 		<div>
 			
 			<div class="article">
-				<h4>Sem conteúdo...</h4>
+				<h4>Falácias e Silogismos</h4>
+				<div class="container">
+					<iframe src="https://drive.google.com/file/d/1DzQyXXjMZ3mihucCdEOt6xw-pTml5I6T/preview" width="100%" height="600px"></iframe>
+				  
+				</div>
 			</div>
 		</div>
 	</div>
