--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Sobre Nós - CEFHUB</title>
+	<title>Sobre Nós - Cefhub</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -22,7 +22,7 @@
 				<a href="about.html">Sobre nós</a>
 			</li>
 			<li>
-				<a href="gallery.html">Matérias</a>
+				<a href="gallery.html">Matéria</a>
 				<ul class="sub-menu">
 					<ul class="sub-menu"> 
                                        <li>
@@ -56,36 +56,6 @@
 					</li>
 				</ul>
 				<span class="arrow">&#9660;</span>
-
-				    <li>
-				          <a href="gallery.html#Matemática">Matemática</a>
-				      </li>
-				     <li>
-			          <a href="gallery.html#Química">Química</a>
-			             </li>
-			        <li>
-			          <a href="gallery.html#Filosofia">Filosofia</a>
-			        </li>
-			        <li>
-			          <a href="gallery.html#Biologia">Biologia</a>
-			         </li>
-			         <li>
-			          <a href="gallery.html#Lp">L.Portuguesa</a>
-			         </li>
-			         <li>
-			          <a href="gallery.html#G.D">G.Descritiva</a> 
-			          </li>
-			          <li> 
-			          <a href="gallery.html#Psicologia">Psicologia</a>
-			          <li>
-			          <a href="gallery.html#Inglês">Inglês</a>
-			         </li>
-			         <li>
-			          <a href="gallery.html#Geologia">Geologia</a>
-					</li>
-				</ul>
-				<span class="arrow">&#9660;</span>
-
 
 			</li>
 			<li>
