--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">contactos</a>
 			</li>
 		</ul>
 	</div>
@@ -77,7 +77,7 @@
 					<div>
 						<h3>Para usurários de IOS e Android</h3>
 						<p>
-						      Para ter a melhor experiência durante as visitas no site, Cefhub, recomendamos o...
+						      Para a melhor experiência durante as visitas no site, Cefhub, recomendamos o...
 						</p>
 						<a href="blog-single-post1.html" class="more">ler isto</a>
 					</div>
