--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,8 @@
 			          </li>
 			          <li> 
 			          <a href="gallery.html#Psicologia">Psicologia</a>
-			          <li>
+			          </li>
+				<li>
 			          <a href="gallery.html#Inglês">Inglês</a>
 			         </li>
 			         <li>
@@ -63,7 +64,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li class="selected">
-				<a href="contact.html">contact</a>
+				<a href="contact.html">contactos</a>
 			</li>
 		</ul>
 	</div>
