--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -47,7 +47,8 @@
 			          </li>
 			          <li> 
 			          <a href="gallery.html#Psicologia">Psicologia</a>
-			          <li>
+			          </li>
+				 <li>
 			          <a href="gallery.html#Inglês">Inglês</a>
 			         </li>
 			         <li>
@@ -62,7 +63,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">contactos</a>
 			</li>
 		</ul>
 	</div>
@@ -74,9 +75,6 @@
 			
 			<div class="article">
 				<h4>Movimento relativo pdf</h4>
-				<div class="container">
-					<iframe src="https://drive.google.com/file/d/1fOowCChQgFrUihStJAHiAJ61QFM7-0Fz/preview" width="100%" height="600px"></iframe>
-				</div>
 			</div>
 		</div>
 	</div>
