--- a/qui4.html
+++ b/qui4.html
@@ -47,7 +47,8 @@
 			          </li>
 			          <li> 
 			          <a href="gallery.html#Psicologia">Psicologia</a>
-			          <li>
+			          </li>
+				 <li>
 			          <a href="gallery.html#Inglês">Inglês</a>
 			         </li>
 			         <li>
@@ -60,7 +61,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">contactos</a>
 			</li>
 		</ul>
 	</div>
@@ -71,7 +72,7 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
-				<h4>Hidrocarbonetos aromáticos pt3 (continuação)</h4>
+				<h4>Hidrocarbonetos aromáticos pt2 (continuação)</h4>
 			</div>
 		</div>
 	</div>
