--- a/qui5.html
+++ b/qui5.html
@@ -47,6 +47,7 @@
 			          </li>
 			          <li> 
 			          <a href="gallery.html#Psicologia">Psicologia</a>
+				  </li>
 			          <li>
 			          <a href="gallery.html#Inglês">Inglês</a>
 			         </li>
@@ -60,7 +61,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">contactos</a>
 			</li>
 		</ul>
 	</div>
@@ -71,7 +72,7 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
-				<h4>Hidrocarbonetos aromáticos pt4 (continuação) </h4> 
+				<h4>Hidrocarbonetos aromáticos (continuação) pt4</h4> 
 			</div>
 		</div>
 	</div>
