--- a/qui1.html
+++ b/qui1.html
@@ -47,6 +47,7 @@
 			          </li>
 			          <li> 
 			          <a href="gallery.html#Psicologia">Psicologia</a>
+				  </li>
 			          <li>
 			          <a href="gallery.html#Inglês">Inglês</a>
 			         </li>
@@ -62,7 +63,7 @@
 				<a href="blog.html">blog</a>
 			</li>
 			<li>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">contactos</a>
 			</li>
 		</ul>
 	</div>
