--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -75,7 +75,7 @@
 		<div>
 		  
 			<div class="article">
-				<h4>O movimento é relativo?</h4>
+				<h4>O movimento é relativo? (PDF)</h4>
 				<div class="container">
 					<iframe src="https://drive.google.com/file/d/1fOowCChQgFrUihStJAHiAJ61QFM7-0Fz/preview" width="100%" height="600px"></iframe>
 				</div>
