--- a/mat3.html
+++ b/mat3.html
@@ -68,7 +68,7 @@
 	<div id="body">
 		<h1><span>Matemática</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://www.youtube.com/embed/Etebz6pcono"
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/Etebz6pcono?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Equação Logaritmica pt1</h4>
