--- a/mat4.html
+++ b/mat4.html
@@ -71,7 +71,7 @@
 	<div id="body">
 		<h1><span>Matemática</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://www.youtube.com/embed/Uv6BqBERKe0"
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/Uv6BqBERKe0?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Equação logarítmica pt2</h4>
