--- a/qui4.html
+++ b/qui4.html
@@ -68,7 +68,7 @@
 	<div id="body">
 		<h1><span>Química</span></h1>
 		<div>
-			<iframe width="300" height="400" src="https://www.youtube.com/embed/oL9wU58pklw" 
+			<iframe width="300" height="400" src="https://www.youtube.com/embed/oL9wU58pklw?modestbranding=1&rel=0&autoplay=1&controls=1&showinfo=0" 
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
