--- a/mat3.html
+++ b/mat3.html
@@ -72,6 +72,9 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Equação Logaritmica pt1</h4>
+                                 <a href="mat3.html" class="previous">&laquo; Anterior</a> 
+				<a href="mat4.html" class="next"> Próximo &raquo;</a>
+				
 			</div>
 		</div>
 	</div>
