--- a/mat4.html
+++ b/mat4.html
@@ -75,6 +75,9 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Equação logarítmica pt2</h4>
+                                <a href="mat4.html" class="previous">&laquo; Anterior</a>
+				<a href="mat5.html" class="next"> Próximo &raquo;</a>
+				
 			</div>
 		</div>
 	</div>
