--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -79,6 +79,8 @@
 				<div class="container">
 					<iframe style='width:250px;height:500px' src='https://online.pubhtml5.com/sgof/hagn/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
 				</div>
+				<a href="" class="previous">&laquo; Anterior</a> 
+				<a href="gallery-single-post2.html" class="next"> Próximo &raquo;</a>
 			
 			</div>
 		</div>
