--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -74,6 +74,8 @@
 		  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
+				<a href="gallery-single-post1.html" class="previous">&laquo; Anterior</a> 
+				<a href="gallery-single-post3.html" class="next"> Próximo &raquo;</a>
 				<h4>Movimento relativo </h4>
 			</div>
 		</div>
