--- a/qui1.html
+++ b/qui1.html
@@ -81,7 +81,7 @@
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2023 by RiquezaXIX. All rights reserved.</p>
+			<p>&copy; 2020 by <br>RiquezaXIX. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19"  target="_blank" id="twitter">twitter</a>
