--- a/qui1.html
+++ b/qui1.html
@@ -74,15 +74,15 @@
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
 				<h4>Hidrocarbonetos pt1</h4>
-				<a href="" class="previous">&laquo; Anterior</a> 
-                        <a href="qui2.html" class="next">Próximo &raquo;</a>
 			</div>
+			<a href="" class="previous">&laquo; Anterior</a> 
+                        <a href="qui2.html" class="next">Próximo &raquo;</a>
 			
 		</div>
 	</div>
 	<div id="footer">
 		<div>
-			<p>&copy; 2020 by <br>RiquezaXIX. All rights reserved.</p>
+			<p>&copy; 2020 by RiquezaXIX. All rights reserved.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19"  target="_blank" id="twitter">twitter</a>
