--- a/gallery-single-post5.html
+++ b/gallery-single-post5.html
@@ -73,6 +73,8 @@
 			<div class="article">
 				<h4>Centro de Massa pt2</h4>
 			</div>
+			 <a href="gallery-single-post4.html" class="previous">&laquo; Anterior</a> 
+				<a href="gallery-single-post6.html" class="next"> Próximo &raquo;</a>
 		</div>
 	</div>
 	<div id="footer">
