--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -79,11 +79,9 @@
 				<div class="container">
 					<script src="https://apps.elfsight.com/p/platform.js" defer></script>
                                          <div class="elfsight-app-7c039e7e-059f-40e1-b16b-46eb7e7e687d"></div>
-                                <a href="" class="previous">&laquo; Anterior</a> 
+                                <</div>
+			        <a href="" class="previous">&laquo; Anterior</a> 
 				<a href="gallery-single-post2.html" class="next"> Próximo &raquo;</a>
-				</div>
-				
-			
 			</div>
 		</div>
 	</div>
