--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -77,7 +77,7 @@
 			   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			<div class="article">
-				<h4>Circuito Elétrico</h4>
+				<h4>Circuito Elétrico.Pt1</h4>
                                 </div>
 			        <a href="" class="previous">&laquo; Anterior</a> 
 				<a href="gallery-single-post2.html" class="next"> Próximo &raquo;</a>
