--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -81,7 +81,7 @@
 				<p> A rede elétrica representada a seguir é constituída por um gerador de força electromotriz desconhecida e resistência interna <strong>1,0Ω</strong>
 					e pelas resistências <strong>R1= 2,0Ω</strong>, <strong>R2= 4,0Ω</strong>, <strong>R3= 3,0Ω</strong>, <strong>R4= 3,0Ω</strong> e
 					<strong>R5= 4,0Ω</strong>. A intensidade da corrente que percorre as resistências R3 e R4 é igual a <strong>2,5A</strong>.<br>
-					Determine a força electromotriz do gerador.
+					Determine a força electromotriz do gerador.</p>
                                 </div>
 			        <a href="" class="previous">&laquo; Anterior</a> 
 				<a href="gallery-single-post2.html" class="next"> Próximo &raquo;</a>
